--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SHOPIFY_STORE_DOMAIN=mmoussa88.myshopify.com
 SHOPIFY_API_VERSION=2024-01
 SHOPIFY_ACCESS_TOKEN=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
+ADMIN_TOKEN=123
